@@ -1,3 +1,7 @@
+2008-01-18 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Makefile support for OS X 10.5 (Intel).
+
 2007-11-17 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add magic key "VoikkoGetStatusInformation" for
